syntax = "proto3";
package logproto;
import public "common/pagination.proto";
import "google/protobuf/struct.proto"; // 导入 google 的结构类型
import "google/protobuf/timestamp.proto"; // 导入时间戳类型

service LogService {
  // 保存走kafka, 不过两种都支持====
  rpc saveLog (LogRequest) returns (stream LogResponse);
}

message LogRequest {
  int32 id = 1; // 唯一索引
  string reportsType = 2; // 报告类型
  string errorUUid = 3; // 错误 UUID
  string siteId = 4; // 站点 ID
  RefType onModel = 5; // 模型引用类型
  google.protobuf.Struct doce = 6; // 内容引用
  string category = 7; // 日志类别
  string userId = 8; // 用户 ID
  string title = 9; // 标题
  string path = 10; // 路径
  string href = 11; // URL
  string method = 12; // 方法
  string url = 13; // 请求 URL
  google.protobuf.Struct body = 14; // 请求体参数
  google.protobuf.Struct params = 15; // 请求参数
  Response response = 16; // 响应
  string value = 17; // 错误信息
  string ip = 18; // IP 地址
  google.protobuf.Timestamp create_at = 19; // 创建时间
  google.protobuf.Timestamp update_at = 20; // 更新时间
  string traceId = 21; // 追踪 ID
  string monitorId = 22; // 
  string nodeId = 23; //
}
enum TransportCategory {
  PV = 0; // 页面浏览
  PREF = 1; // 性能
  EVENT = 2; // 事件
  CUSTOM = 3; // 自定义
  API = 4; // API 请求
  ERROR = 5; // 错误
  RV = 6; // 视频
  USER = 7; // 用户
}

// 日志类型
enum MetricsName {
  FP = 0; // 首次绘制
  FCP = 1; // 首次内容绘制
  FMP = 2; // 首次有意义绘制
  NT = 3; // 导航时间
  RF = 4; // 资源流
  RCR = 5; // 路由变化记录
  CBR = 6; // 点击行为记录
  CDR = 7; // 自定义定义记录
  HT = 8; // HTTP 记录
  CE = 9; // 变化曝光
  JS = 10; // JS
  RS = 11; // 资源
  UJ = 12; // 未处理的拒绝
  CS = 13; // CORS
  REACT = 14; // React
  HTS = 15; // HTTP
}

// 响应消息定义
message Response {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Struct data = 3;
}


// 引用类型
enum RefType {
  ApiLog = 0; // API 日志
  EventLog = 1; // 事件日志
  ErrorLog = 2; // 错误日志
  PrefLog = 3; // 性能日志
  PvLog = 4; // 页面浏览日志
  CustomLog = 5; // 自定义日志
  UserLog = 6; // 用户日志
}


message LogResponse {
  int32 id = 1;
}

